# pyfqmr-Fast-Quadric-Mesh-Reduction

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README.rst  cytest2.py  cythonMeshReduction2.c  cythonMeshReduction2.html  cythonMeshReduction2.pxd  pySimplify.py  pyproject.toml  setup.py  simplify.py
.github/workflows/: build-wheels.yml  test.yml
_cpp.src/src.gl/: Core.h  Main.cpp  OBJ.h
_pySimplify/: simplify_wrapper.cpp  simplify_wrapper.html  simplify_wrapper.pyx
_pySimplify/__archive__/: cythonize.py
cyarray/: cyarray.pyx
cythonMeshReduction/: cysetup.py  cythonMeshReduction.c  cythonMeshReduction.pyx
cythonMeshReduction/test/: cytest2.py  cythonMeshReduction2.c  cythonMeshReduction2.html  cythonMeshReduction2.pyx  test.c  test.pyx
cython_wrapping/: Core.cpp  Core.h  Main.cpp  Simplify.h  Simplify.h.gch  Simplify.pxd  SimplifyClass.cpp  SimplifyPy.pxd  SimplifyPyWrap.pyx  VecMath.h  setup.py
cython_wrapping/mathlib/: _matrix33.h  _matrix33_sse.h  _matrix44.h  _matrix44_sse.h  _vector2.h  _vector3.h  _vector4.h  bbox.h  envelopecurve.h  eulerangles.h  line.h  matrix.h  pknorm.h  plane.h  polar.h  quaternion.h  rectangle.h  sphere.h  transform33.h  transform44.h  triangle.h  vector.h
pyFMR/: Simplify.cpp  Simplify.h  Simplify.pyx  __init__.py  pySimplify.cpp  pySimplify.pyx  simplify_wrapper.html
pySimplify/: Simplify.h  __init__.py  simplify_wrapper.cpp  simplify_wrapper.html  simplify_wrapper.pyx
pyfqmr/: Simplify.cpp  Simplify.h  Simplify.pyi  Simplify.pyx
src/: setup.py  simplify_wrapper.cpp
src.cmd/: Simplify.h
src.cython/: simplify_wrapper.cpp  simplify_wrapper.html  simplify_wrapper.pyx
src.gl/: Simplify.h
tests/: requirements.txt  test_simplify.py
(+12 files in other folders)
